package com.example.orderflow.enums;

public enum OrderStatus {

    CREATED,
    PROCESSING,
    COMPLETED,
    CANCELED    

}
